--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -36,6 +36,42 @@
 
 - type: entity
   parent: BasePlushie
+  id: PlushAlina
+  name: plush alina kotova
+  description: Very soft and beautiful toy.
+  components:
+  - type: Sprite
+    state: plush_alina
+  - type: EmitSoundOnUse
+    sound:
+      path: /Audio/Animals/cat_meow.ogg
+  - type: EmitSoundOnActivate
+    sound:
+      path: /Audio/Animals/cat_meow.ogg
+  - type: MeleeWeapon
+    soundHit:
+      path: /Audio/Animals/cat_meow.ogg
+
+- type: entity
+  parent: BasePlushie
+  id: PlushLia
+  name: plush lia niko
+  description: Very soft and beautiful toy.
+  components:
+  - type: Sprite
+    state: plush_lia
+  - type: EmitSoundOnUse
+    sound:
+      path: /Audio/Animals/cat_meow.ogg
+  - type: EmitSoundOnActivate
+    sound:
+      path: /Audio/Animals/cat_meow.ogg
+  - type: MeleeWeapon
+    soundHit:
+      path: /Audio/Animals/cat_meow.ogg
+
+- type: entity
+  parent: BasePlushie
   id: PlushieGhost
   name: ghost soft toy
   description: The start of your personal GHOST GANG!
@@ -475,6 +511,9 @@
       Plastic: 100
   - type: StaticPrice
     price: 10
+  - type: Tag
+    tags:
+    - Figurine
 
 - type: entity
   parent: BaseFigurine
@@ -813,6 +852,8 @@
     size: 24
     sprite: Objects/Fun/toys.rsi
     heldPrefix: bask
+  - type: TileFrictionModifier
+    modifier: 0.01
 
 - type: entity
   parent: BaseItem
@@ -827,6 +868,22 @@
     size: 12
     sprite: Objects/Fun/toys.rsi
     heldPrefix: footb
+
+- type: entity
+  parent: BaseItem
+  id: BeachBall
+  name: beach ball
+  description: The simple beach ball is one of Nanotrasen's most popular products. 'Why do we make beach balls? Because we can! (TM)' - Nanotrasen
+  components:
+  - type: Sprite
+    sprite: Objects/Fun/toys.rsi
+    state: beachball
+  - type: Item
+    size: 24
+    sprite: Objects/Fun/toys.rsi
+    heldPrefix: beachb
+  - type: TileFrictionModifier
+    modifier: 0.01
 
 - type: entity
   parent: BaseItem
