--- a/Resources/Prototypes/AlertLevels/alert_levels.yml
+++ b/Resources/Prototypes/AlertLevels/alert_levels.yml
@@ -5,12 +5,11 @@
     green:
       announcement: alert-level-green-announcement
       color: Green
-      shuttleTime: 1200
+      shuttleTime: 600
     blue:
       announcement: alert-level-blue-announcement
       sound: /Audio/Misc/bluealert.ogg
       color: DodgerBlue
-      shuttleTime: 600
     violet:
       announcement: alert-level-violet-announcement
       sound: /Audio/Misc/notice1.ogg
@@ -22,12 +21,11 @@
       sound: /Audio/Misc/notice1.ogg
       color: Yellow
       emergencyLightColor: Goldenrod
-      shuttleTime: 600
+      shuttleTime: 400
     red:
       announcement: alert-level-red-announcement
       sound: /Audio/Misc/redalert.ogg
       color: Red
-      shuttleTime: 600 #No reduction in time as we don't have swiping for red alert like in /tg/. Shuttle times are intended to create friction, so having a way to brainlessly bypass that would be dumb.
     gamma:
       announcement: alert-level-gamma-announcement
       selectable: false
@@ -45,7 +43,7 @@
       sound:
         path: /Audio/Misc/delta.ogg
         params:
-          volume: -6 # Corvax: Reduce sound volume
+          volume: -3
       disableSelection: true
       color: DarkRed
       emergencyLightColor: Orange
@@ -63,3 +61,27 @@
       emergencyLightColor: DarkViolet
       forceEnableEmergencyLights: true
       shuttleTime: 1200
+      unknown:
+      announcement: alert-level-unknown-announcement
+      selectable: false
+      sound:
+        path: /Audio/Misc/unknown.ogg
+        params:
+          volume: -2
+      disableSelection: true
+      color: PaleVioletRed
+      emergencyLightColor: PaleVioletRed
+      forceEnableEmergencyLights: true
+      shuttleTime: 120000
+      dark:
+      announcement: alert-level-dark-announcement
+      selectable: false
+      sound:
+        path: /Audio/Misc/dark.ogg
+        params:
+          volume: -2
+      disableSelection: true
+      color: Dark
+      emergencyLightColor: Dark
+      forceEnableEmergencyLights: true
+      shuttleTime: 600
